modified package file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csssr",
+  "name": "project-stubl",
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "latest",
@@ -7,6 +7,6 @@
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-sass": "latest",
     "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
+    "grunt-contrib-watch": "latest"
   }
 }
